--- a/template/index.html
+++ b/template/index.html
@@ -85,13 +85,12 @@
     
     <section id="info">
       <div>
-        <img src="../static/vasanth1.png" alt="Vasanth">
+        <img src="../static/kousik1.jpg" alt="Vasanth">
       </div>
       <div>
         <h2>Developer</h2>
-        <p class="about-content"> Hi, I'm Vasanth, a Data Scientist 🚀 from India. 
-          Currently, I'm learning ML, DL, CV & NLP. I have an experience as a Data Science Intern in a 
-          company called prithvi.ai situated at Noida for around three months. Now currently I am trying
+        <p class="about-content"> Hi, I'm Kousik, a Data Science enthusiast🚀 from India. 
+          Currently, I'm learning ML, DL, CV & NLP.  Now currently I am trying
           to do some self - paced projects in data science like Rainy Brain, Smart Attendance System, 
           J.A.R.V.I.S, etc.. I also have experience of taking webinars in my college. I am also trying
           to do some projects for my college too. Always curious to learn something new in
@@ -102,12 +101,12 @@
 
     <footer>
       <p>
-        Developed with ❤️ by Vasanth
+        Developed by ❤️ by Kousik & Deep
       </p> 
       <div class="media-icons">
-        <a href="https://www.linkedin.com/in/vasanth-p-90826218b/"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Vasanthengineer4949"><i class="fab fa-github"></i></a>
-        <a href="https://twitter.com/V51430"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/kousik-nandi-a65202191/"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Nandikousik"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/KousikNandi13"><i class="fab fa-twitter"></i></a>
       </div>
     </footer>
 
