--- a/template/index.html
+++ b/template/index.html
@@ -34,9 +34,9 @@
         </div>
       </div>
       <div class="media-icons">
-        <a href="https://www.linkedin.com/in/vasanth-p-90826218b/"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Vasanthengineer4949"><i class="fab fa-github"></i></a>
-        <a href="https://twitter.com/V51430"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/kousik-nandi-a65202191/"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Nandikousik"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/KousikNandi13"><i class="fab fa-twitter"></i></a>
       </div>
     </section>
 
@@ -45,7 +45,7 @@
       <p class="about-content" style="text-align: center;">Rainy Brain is a web app which has 
       a Machine Learning model running at the back. The purpose of developing this app is to 
       predict whether it will rain the next day or not. This model is based on the Rain Prediction
-      in Australia dataset. The codes for this project can be checked in my <a href="https://github.com/Vasanthengineer4949/RainPrediction" style="color: black; font-weight: bold;">github repo</a>. More than 80% of Australia has an annual rainfall of less than 
+      in Australia dataset. The codes for this project can be checked in my <a href="https://github.com/Nandikousik/Rainy-Brain" style="color: black; font-weight: bold;">github repo</a>. More than 80% of Australia has an annual rainfall of less than 
       600 mm which is less among the all continents other than Antartica which recieves less 
       rainfall. A place inland near Lake Eyre would only receive 81 mm of rain annually. The 
       average annual rainfall in the Australian desert is low, ranging from 81 to 250 mm. 
@@ -70,7 +70,7 @@
         account. So to see the visualizations interactive I am attaching my <a href="../static/rain.pbix" style="color: black; font-weight: bold;">PowerBI</a>
         dashboard file. This requires PowerBI software to open the file. The usage of dashboards like
         these is to bring a better understanding about the dataset and also to bring some beautiful insights</p>
-      <img class="dashboard-image" src="../static/dashboard.png" alt="1">
+      <img class="dashboard-image" src="../static/dashboard.jpeg" alt="1">
       <div>
         <img src="../static/1.png" alt="1">
         <img src="../static/3.png" alt="3">
@@ -85,7 +85,7 @@
     
     <section id="info">
       <div>
-        <img src="../static/kousik1.jpg" alt="Vasanth">
+        <img src="../static/kousik1.jpg" alt="Kousik">
       </div>
       <div>
         <h2>Developer</h2>
