--- a/template/index.html
+++ b/template/index.html
@@ -88,13 +88,23 @@
         <img src="../static/kousik1.jpg" alt="Kousik">
       </div>
       <div>
-        <h2>Developer</h2>
-        <p class="about-content"> Hi, I'm Kousik, a Data Science enthusiast🚀 from India. 
-          Currently, I'm learning ML, DL, CV & NLP.  Now currently I am trying
-          to do some self - paced projects in data science like Rainy Brain, Smart Attendance System, 
-          J.A.R.V.I.S, etc.. I also have experience of taking webinars in my college. I am also trying
+        <h2>Developers</h2>
+        <p class="about-content"> Hi, I'm <a href="https://nandikousik.github.io/Kousik-Portfolio/" style="color: black; font-weight: bold;">Kousik Nandi</a>, a Django,Flask and ML enthusiast🚀 from India. 
+          Currently, I'm learning ML, DL, NodeJS. I also have experience of taking webinars in my college. I am also trying
           to do some projects for my college too. Always curious to learn something new in
           the field of Data Science. Beside's programming, I enjoy playing games and watching youtube. 
+          Below I have given my social media links. Happy to have new connections.</p>
+      </div>
+      
+    </section>
+    <section id="info">
+      <div>
+        <img src="../static/deep2.jpeg" alt="Kousik">
+      </div>
+      <div>
+        <p class="about-content"> Hi, I'm <a href="https://github.com/deepnarayanmondal" style="color: black; font-weight: bold;">Deep Narayan Mondal</a>, a Front End enthusiast🚀 from India. 
+          Currently, I'm learning ReactJS and AngularJS.  Now currently I am trying
+          to do some self - paced projects in front end and fullstack project with collaboration.
           Below I have given my social media links. Happy to have new connections.</p>
       </div>
       
@@ -102,7 +112,7 @@
 
     <footer>
       <p>
-        Developed by ❤️ by Kousik & Deep
+        Developed by 🤝🏻 by Kousik & Deep
       </p> 
       <div class="media-icons">
         <a href="https://www.linkedin.com/in/kousik-nandi-a65202191/"><i class="fab fa-linkedin"></i></a>
