--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainy Brain</title>
+    <title>Weatherspark</title>
     <link rel="stylesheet" href={{url_for('static',filename='style1.css')}}>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   </head>
@@ -13,10 +13,10 @@
       <input type="checkbox" id="check">
       <header>
         </div>
-        <h2><a href="#" class="logo">Rainy Brain</a></h2>
+        <h2><a href="#" class="logo">Weatherspark</a></h2>
         <div class="navigation">
           <a href="#">Home</a>
-          <a href="#about">About Rainy Brain</a>
+          <a href="#about">About Weatherspark</a>
           <a href="#dashboard">Dashboard</a>
           <a href="#info">Developer</a>
           <a href="/predict">Predictor</a>
@@ -28,8 +28,8 @@
       </header>
       <div class="content" style="margin-top: 8%;">
         <div class="info">
-          <h2>Plant Trees <br><span>Save Rain</span></h2>
-          <p> "Plant trees to bring the rains and get rid of the summer's heat.” - Trees help reduce and moderate the temperature and climate, which is why it is so important that we have more of them</p>
+          <h2>Forecast Prepare<br><span>Relax</span></h2>
+          <p> "Wherever you go,no matter what the weather,always bring your own sunshine" - Anthony I,D'Angelo</p>
           <a href="#about" class="info-btn">More info</a>
         </div>
       </div>
@@ -41,11 +41,11 @@
     </section>
 
     <section id="about">
-      <h2>About Rainy Brain</h2>
-      <p class="about-content" style="text-align: center;">Rainy Brain is a web app which has 
+      <h2>About Weatherspark</h2>
+      <p class="about-content" style="text-align: center;">Weatherspark is a web app which has 
       a Machine Learning model running at the back. The purpose of developing this app is to 
       predict whether it will rain the next day or not. This model is based on the Rain Prediction
-      in Australia dataset. The codes for this project can be checked in my <a href="https://github.com/Nandikousik/Rainy-Brain" style="color: black; font-weight: bold;">github repo</a>. More than 80% of Australia has an annual rainfall of less than 
+      in Australia dataset. The codes for this project can be checked in my <a href="https://github.com/Nandikousik/Weatherspark" style="color: black; font-weight: bold;">github repo</a>. More than 80% of Australia has an annual rainfall of less than 
       600 mm which is less among the all continents other than Antartica which recieves less 
       rainfall. A place inland near Lake Eyre would only receive 81 mm of rain annually. The 
       average annual rainfall in the Australian desert is low, ranging from 81 to 250 mm. 
