--- a/template/index.html
+++ b/template/index.html
@@ -16,8 +16,7 @@
         <h2><a href="#" class="logo">Weatherspark</a></h2>
         <div class="navigation">
           <a href="#">Home</a>
-          <a href="#about">About Weatherspark</a>
-          <a href="#dashboard">Dashboard</a>
+          <a href="#about">About</a>
           <a href="#info">Developer</a>
           <a href="/predict">Predictor</a>
         </div>
